# public/openapi/components/schemas/TopicObject.yaml
@@ -91,9 +91,6 @@ TopicObject:
             - icon:text
             - icon:bgColor
             - banned_until_readable
-        resolved:
-          type: boolean
-          description: Whether the topic is marked as resolved
         teaser:
           type: object
           properties:
@@ -237,6 +234,8 @@ TopicObjectSlim:
           type: number
           description: Whether or not this particular topic is pinned to the top of the
             category
+        resolved:
+          type: boolean
         timestamp:
           type: number
         timestampISO:
