# src/controllers/category.js
@@ -1,6 +1,6 @@
 'use strict';
 
-const topics = require('../topics'); // add this line
+// const topics = require('../topics'); // add this line
 
 const nconf = require('nconf');
 const validator = require('validator');
@@ -181,16 +181,14 @@ categoryController.get = async function (req, res, next) {
 			categoryData.handleFull = `${categoryData.handle}@${nconf.get('url_parsed').host}`;
 		}
 	}
-	if (Array.isArray(categoryData.topics) && categoryData.topics.length) {
-		const tids = categoryData.topics.map(t => t && t.tid).filter(Boolean);
-		const rows = await topics.getTopicsFields(tids, ['resolved']); 
-		
-		categoryData.topics = categoryData.topics.map((t, i) => ({
+	
+	if (Array.isArray(categoryData.topics)) {
+		categoryData.topics = categoryData.topics.filter(Boolean).map(t => ({
 			...t,
-			resolved: !!(+rows[i]?.resolved),
+			resolved: Boolean(t?.resolved ?? t?.isResolved ?? false),
 		}));
 	}
-	
+
 	res.render('category', categoryData);
 
 };
